[tool.poetry]
name = "cast_deceased"
version = "0.1.0"
description = ""
authors = ["Guillaume Faguet <guillaume.faguet@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cinemagoer = "^2022.2.11"
black = "^22.1.0"
streamlit = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
